# RetinoblastomaAtlas

./: .gitignore  GEMINI.md  README.md  main.py  pixi.toml  pyproject.toml  research_plan.md
Python_Script/: 00_data_loading.py  01_qc_filtering.py  05_copy_number_variation.py  07_rna_velocity.py  09_ligand_receptor_communication.py  10_tgfb_pathway_scoring.py
R_Script/: 00_fetch_geo_metadata.R  01_data_loading_qc.R  02_normalization_integration.R  03_annotation_markers.R  04_scoring_pathway.R  05_cell_communication.R  06_trajectory_analysis.R  README_R.md  check_all_samples.R  check_values.R  diag_metadata.R  test_pipeline.R
manuscript/: bibliography.bib  manuscript.qmd
notebooks/: 00_data_loading.ipynb  01_qc_filtering.ipynb  02_normalization_hvg.ipynb  03_scvi_integration.ipynb  04_cell_type_annotation.ipynb  05_copy_number_variation.ipynb  06_subtype_scoring.ipynb  07_rna_velocity.ipynb  08_cellrank_fate_mapping.ipynb  09_ligand_receptor_communication.ipynb  10_tgfb_pathway_scoring.ipynb  data-preprocessing.ipynb  data_exploration.ipynb
results/tables/: qc_summary_per_sample.csv  sample_metadata.csv
script/: 02_normalization_hvg.py  03_scvi_integration.py  04_cell_type_annotation.py  06_subtype_scoring.py  08_cellrank_fate_mapping.py
utils/: __init__.py  data_exploration.py  qc.py  visualization.py
