[project]
name = "retinoblastomaatlas"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "anndata>=0.12.13",
    "h5py>=3.16.0",
    "jupyter>=1.1.1",
    "lab>=8.9",
    "numpy>=2.4.4",
    "pandas>=2.3.3",
    "scanpy>=1.12.1",
    "scikit-learn>=1.8.0",
    "scipy>=1.17.1",
    "scrublet>=0.2.3",
]
